add user interface

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,15 @@
     <title>Haiku</title>
   </head>
   <body>
+    <h1>Please enter your poem to see if it is a haiku</h1>
+    <form id = "formOne">
+      <input id = "line1" type="text" placeholder="line one">
+      <input id = "line2" type="text" placeholder="line two">
+      <input id = "line3" type="text" placeholder="line three">
+      <button type="submit" name="button" class="btn btn-info">Submit</button>
+    </form>
+    <div id = "output">
 
+    </div>
   </body>
 </html>
